@@ -9,6 +9,12 @@ Depends:
     ape (>= 3.2)
 Imports:
     phangorn (>= 1.99.12)
+	stats
+	graphics
+	grDevices
+	methods
+	utils
+	
 ByteCompile: TRUE
 Maintainer: David W. Bapst <dwbapst@gmail.com>
 Description: Analyzes, time-scales and simulates phylogenies of extinct/fossil
