@@ -109,3 +109,8 @@ importFrom(phangorn,Ancestors)
 importFrom(phangorn,Descendants)
 importFrom(phangorn,ancestral.pars)
 importFrom(phangorn,phyDat)
+import(stats)
+importFrom("graphics", "par", "layout", "plot", "hist", "lines", "legend", "polygon", "title")
+importFrom("grDevices", "rainbow")
+importFrom("methods", "is")
+importFrom("utils", "read.csv")
